--- a/DoubleNavDrawer/src/main/res/values/styles.xml
+++ b/DoubleNavDrawer/src/main/res/values/styles.xml
@@ -1,7 +1,14 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="android:Theme.Holo.Light.DarkActionBar">
+    <style name="BaseTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+        <!-- Customize your theme here. -->
+    </style>
+
+
+    <!-- Application theme. -->
+    <style name="AppTheme" parent="BaseTheme">
         <!-- Customize your theme here. -->
     </style>
 
