--- a/DoubleNavDrawer/src/main/res/values-v21/styles.xml
+++ b/DoubleNavDrawer/src/main/res/values-v21/styles.xml
@@ -2,8 +2,10 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="BaseTheme" parent="android:Theme.Material.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
+    <style name="BaseTheme" parent="android:Theme.Material.Light">
+        <item name="android:colorPrimary">@color/primary</item>
+        <item name="android:colorPrimaryDark">@color/primary_dark</item>
+        <item name="android:colorAccent">@color/accent</item>
     </style>
 
 </resources>
