--- a/DemoApp/src/main/res/drawable/progress_lock.xml
+++ b/DemoApp/src/main/res/drawable/progress_lock.xml
@@ -6,7 +6,7 @@
         <shape
             android:shape="oval"
             android:useLevel="false">
-            <solid android:color="@android:color/holo_green_light" />
+            <solid android:color="@color/unlock_accent" />
         </shape>
     </item>
 
@@ -16,7 +16,7 @@
             android:shape="ring"
             android:thicknessRatio="11"
             android:useLevel="false">
-            <solid android:color="@android:color/holo_blue_bright" />
+            <solid android:color="@color/unlock_primary" />
         </shape>
     </item>
 
@@ -34,7 +34,7 @@
                 android:innerRadiusRatio="2.45"
                 android:shape="ring"
                 android:thicknessRatio="11">
-                <solid android:color="@android:color/holo_blue_dark" />
+                <solid android:color="@color/unlock_primary_dark" />
             </shape>
         </rotate>
     </item>
