--- a/DemoApp/src/main/res/layout/activity_double_nav.xml
+++ b/DemoApp/src/main/res/layout/activity_double_nav.xml
@@ -23,7 +23,7 @@
          the container. -->
     <fragment
         android:id="@+id/main_navigation_drawer"
-        android:name="com.cyrilleroux.android.demo.drawer.LeftDrawerFragment"
+        android:name="com.cyrilleroux.android.drawer.LeftDrawerFragment"
         android:layout_width="@dimen/navigation_drawer_width"
         android:layout_height="match_parent"
         android:layout_gravity="start"
@@ -31,7 +31,7 @@
 
     <fragment
         android:id="@+id/right_navigation_drawer"
-        android:name="com.cyrilleroux.android.demo.drawer.RightDrawerFragment"
+        android:name="com.cyrilleroux.android.drawer.RightDrawerFragment"
         android:layout_width="@dimen/navigation_drawer_width"
         android:layout_height="match_parent"
         android:layout_gravity="end"
