--- a/DemoApp/src/main/res/values/dimens.xml
+++ b/DemoApp/src/main/res/values/dimens.xml
@@ -2,6 +2,7 @@
 
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="common_margin">16dp</dimen>
+    <dimen name="medium_margin">8dp</dimen>
 
     <!-- Per the design guidelines, navigation drawers should be between 240dp and 320dp:
          https://developer.android.com/design/patterns/navigation-drawer.html -->
@@ -9,5 +10,9 @@
 
     <dimen name="lock_size">90dp</dimen>
     <dimen name="lock_spacing">16dp</dimen>
+
+    <dimen name="text_title">24sp</dimen>
+    <dimen name="text_subtitle">16sp</dimen>
+    <dimen name="text_placeholder">20sp</dimen>
 
 </resources>
