Fixed Unlock demo for Lollipop

--- a/DemoApp/src/main/res/drawable/progress_lock.xml
+++ b/DemoApp/src/main/res/drawable/progress_lock.xml
@@ -33,7 +33,8 @@
             <shape
                 android:innerRadiusRatio="2.45"
                 android:shape="ring"
-                android:thicknessRatio="11">
+                android:thicknessRatio="11"
+                android:useLevel="true">
                 <solid android:color="@color/unlock_primary_dark" />
             </shape>
         </rotate>
