--- a/DemoApp/src/main/res/values-v16/styles.xml
+++ b/DemoApp/src/main/res/values-v16/styles.xml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <resources>
+
+    <!--
+        App styles
+    -->
 
     <style name="BaseText">
         <item name="android:textColor">@android:color/primary_text_light</item>
