--- a/DemoApp/src/main/res/values/styles.xml
+++ b/DemoApp/src/main/res/values/styles.xml
@@ -1,6 +1,11 @@
+<?xml version="1.0" encoding="utf-8"?>
+
 <resources>
 
-    <!-- Base application theme. -->
+    <!--
+        Base application theme
+    -->
+
     <style name="AppTheme" parent="android:Theme.Holo.Light.DarkActionBar">
         <item name="android:actionBarStyle">@style/Custom.ActionBar</item>
     </style>
@@ -14,6 +19,10 @@
     <style name="MyTheme.ActionBar.TitleTextStyle" parent="@android:style/TextAppearance.Holo.Widget.ActionBar.Title">
         <item name="android:textColor">@android:color/primary_text_dark</item>
     </style>
+
+    <!--
+        Compat themes
+    -->
 
     <style name="BaseCompatTheme" parent="Theme.AppCompat.Light.DarkActionBar" />
 
@@ -35,15 +44,19 @@
         <item name="colorAccent">@color/double_nav_accent</item>
     </style>
 
+    <!--
+        App styles
+    -->
+
     <style name="BaseText">
         <item name="android:textColor">@android:color/primary_text_light</item>
     </style>
 
-    <style name="SampleTitle" parent="BaseText">
+    <style name="sample_title" parent="BaseText">
         <item name="android:textSize">@dimen/text_title</item>
     </style>
 
-    <style name="SampleSubtitle" parent="BaseText">
+    <style name="sample_subtitle" parent="BaseText">
         <item name="android:textSize">@dimen/text_subtitle</item>
     </style>
 
