--- a/DemoApp/src/main/res/values-v21/styles.xml
+++ b/DemoApp/src/main/res/values-v21/styles.xml
@@ -1,6 +1,11 @@
+<?xml version="1.0" encoding="utf-8"?>
+
 <resources>
 
-    <!-- Base application theme. -->
+    <!--
+        Base application theme
+    -->
+
     <style name="AppTheme" parent="android:Theme.Material.Light.DarkActionBar">
         <item name="android:colorPrimary">@color/primary</item>
         <item name="android:colorPrimaryDark">@color/primary_dark</item>
