--- a/KitkatTv/src/main/res/values/styles.xml
+++ b/KitkatTv/src/main/res/values/styles.xml
@@ -1,8 +1,24 @@
+<?xml version="1.0" encoding="utf-8"?>
+
 <resources>
 
-    <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
+    <!--
+        Base application theme
+    -->
+
+    <style name="AppTheme" parent="Theme.AppCompat">
+        <item name="colorPrimary">@color/primary</item>
+        <item name="colorPrimaryDark">@color/primary_dark</item>
+        <item name="colorAccent">@color/accent</item>
+    </style>
+
+    <style name="primary_btn">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:fontFamily">sans-serif</item>
+        <item name="android:background">@drawable/primary_btn</item>
+        <item name="android:textColor">@android:color/primary_text_dark</item>
+        <item name="android:padding">@dimen/medium_margin</item>
     </style>
 
 </resources>
