--- a/DemoApp/src/main/res/layout/card_item.xml
+++ b/DemoApp/src/main/res/layout/card_item.xml
@@ -4,7 +4,7 @@
     android:id="@+id/card_view"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
+    android:layout_width="200dp"
     android:layout_height="200dp"
     android:layout_margin="10dp"
     card_view:cardCornerRadius="4dp"
