- implemented full screen drawers in DoubleDrawerActivity - Reorganized packages - Fixed styles

--- a/DemoApp/src/main/res/values-v21/styles.xml
+++ b/DemoApp/src/main/res/values-v21/styles.xml
@@ -3,13 +3,15 @@
 <resources>
 
     <!--
-        Base application theme
+        Application themes
     -->
-
-    <style name="AppTheme" parent="android:Theme.Material.Light.DarkActionBar">
-        <item name="android:colorPrimary">@color/primary</item>
-        <item name="android:colorPrimaryDark">@color/primary_dark</item>
-        <item name="android:colorAccent">@color/accent</item>
+    <style name="DoubleNavTheme" parent="AppTheme">
+        <item name="windowActionBar">false</item>
+        <item name="windowActionModeOverlay">true</item>
+        <item name="android:windowActionBar">false</item>
+        <item name="android:windowActionModeOverlay">true</item>
+        <item name="android:windowDrawsSystemBarBackgrounds">true</item>
+        <item name="android:windowTranslucentStatus">true</item>
     </style>
 
 </resources>
