--- a/DemoApp/src/main/res/layout/activity_double_nav.xml
+++ b/DemoApp/src/main/res/layout/activity_double_nav.xml
@@ -4,17 +4,35 @@
 <android.support.v4.widget.DrawerLayout
     android:id="@+id/drawer_layout"
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MyActivity">
 
-    <!-- As the main content view, the view below consumes the entire
-         space available using match_parent in both dimensions. -->
-    <FrameLayout
-        android:id="@+id/container"
+    <!-- Your normal content view -->
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <!-- We use a Toolbar so that our drawer can be displayed in front of the action bar -->
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/custom_toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/status_bar_height"
+            app:popupTheme="@style/DoubleNavTheme"
+            app:theme="@style/DoubleNavTheme" />
+
+        <!-- As the main content view, the view below consumes the entire
+             space available using match_parent in both dimensions. -->
+        <FrameLayout
+            android:id="@+id/container"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:focusableInTouchMode="true" />
+    </LinearLayout>
 
     <!-- android:layout_gravity="start" tells DrawerLayout to treat
          this as a sliding drawer on the left side for left-to-right
@@ -25,7 +43,7 @@
          the container. -->
     <fragment
         android:id="@+id/main_navigation_drawer"
-        android:name="com.cyrilleroux.android.drawer.LeftDrawerFragment"
+        android:name="com.cyrilleroux.android.demo.drawer.LeftDrawerFragment"
         android:layout_width="@dimen/navigation_drawer_width"
         android:layout_height="match_parent"
         android:layout_gravity="start"
@@ -33,7 +51,7 @@
 
     <fragment
         android:id="@+id/right_navigation_drawer"
-        android:name="com.cyrilleroux.android.drawer.RightDrawerFragment"
+        android:name="com.cyrilleroux.android.demo.drawer.RightDrawerFragment"
         android:layout_width="@dimen/navigation_drawer_width"
         android:layout_height="match_parent"
         android:layout_gravity="end"
