--- a/DemoApp/src/main/res/values/dimens.xml
+++ b/DemoApp/src/main/res/values/dimens.xml
@@ -3,6 +3,8 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="common_margin">16dp</dimen>
     <dimen name="medium_margin">8dp</dimen>
+    <!-- ActionBar top margin when status bar is overlayed (API 21+)-->
+    <dimen name="status_bar_height">0dp</dimen>
 
     <!-- Per the design guidelines, navigation drawers should be between 240dp and 320dp:
          https://developer.android.com/design/patterns/navigation-drawer.html -->
