--- a/DemoApp/src/main/res/values/styles.xml
+++ b/DemoApp/src/main/res/values/styles.xml
@@ -3,48 +3,33 @@
 <resources>
 
     <!--
-        Base application theme
+        Base application themes
     -->
 
-    <style name="AppTheme" parent="android:Theme.Holo.Light.DarkActionBar">
-        <item name="android:actionBarStyle">@style/Custom.ActionBar</item>
-    </style>
+    <style name="BaseCompatTheme" parent="Theme.AppCompat.Light.DarkActionBar" />
 
-    <style name="Custom.ActionBar" parent="@android:style/Widget.Holo.Light.ActionBar">
-        <item name="android:background">@color/primary</item>
-        <item name="android:displayOptions">showTitle</item>
-        <item name="android:titleTextStyle">@style/MyTheme.ActionBar.TitleTextStyle</item>
-    </style>
-
-    <style name="MyTheme.ActionBar.TitleTextStyle" parent="@android:style/TextAppearance.Holo.Widget.ActionBar.Title">
-        <item name="android:textColor">@android:color/primary_text_dark</item>
+    <style name="AppTheme" parent="BaseCompatTheme">
+        <item name="colorPrimary">@color/primary</item>
+        <item name="colorPrimaryDark">@color/primary_dark</item>
+        <item name="colorAccent">@color/accent</item>
     </style>
 
     <!--
         Compat themes
     -->
 
-    <style name="BaseCompatTheme" parent="Theme.AppCompat.Light.DarkActionBar" />
-
-    <style name="UnlockTheme" parent="BaseCompatTheme">
+    <style name="UnlockTheme" parent="AppTheme">
         <item name="colorPrimary">@color/unlock_primary</item>
         <item name="colorPrimaryDark">@color/unlock_primary_dark</item>
         <item name="colorAccent">@color/unlock_accent</item>
     </style>
 
-    <style name="SimpleNavTheme" parent="BaseCompatTheme">
-        <item name="colorPrimary">@color/nav_primary</item>
-        <item name="colorPrimaryDark">@color/nav_primary_dark</item>
-        <item name="colorAccent">@color/nav_accent</item>
+    <style name="DoubleNavTheme" parent="AppTheme">
+        <item name="windowActionBar">false</item>
+        <item name="windowActionModeOverlay">true</item>
     </style>
 
-    <style name="DoubleNavTheme" parent="BaseCompatTheme">
-        <item name="colorPrimary">@color/double_nav_primary</item>
-        <item name="colorPrimaryDark">@color/double_nav_primary_dark</item>
-        <item name="colorAccent">@color/double_nav_accent</item>
-    </style>
-
-    <style name="FadingActionBar" parent="UnlockTheme">
+    <style name="FadingActionBar" parent="AppTheme">
         <item name="windowActionModeOverlay">true</item>
         <item name="android:windowContentOverlay">@null</item>
         <item name="windowActionBarOverlay">true</item>
