--- a/DemoApp/src/main/res/layout/activity_notification.xml
+++ b/DemoApp/src/main/res/layout/activity_notification.xml
@@ -1,14 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center">
+    android:gravity="center"
+    android:orientation="vertical">
 
     <Button
-        android:id="@+id/btn_notify"
+        android:id="@+id/btn_simple_notification"
         android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_margin="@dimen/common_margin"
-        android:text="Notifier"
-        android:layout_height="wrap_content" />
+        android:text="@string/btn_simple_notification"
+        android:textAllCaps="false" />
+
+    <Button
+        android:id="@+id/btn_inbox_notification"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/common_margin"
+        android:text="@string/btn_inbox_notification"
+        android:textAllCaps="false" />
+
+    <Button
+        android:id="@+id/btn_blinking_notification"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/common_margin"
+        android:text="@string/btn_blinking_notification"
+        android:textAllCaps="false" />
 
 </LinearLayout>
