--- a/DemoApp/src/main/res/layout/fragment_navigation_drawer.xml
+++ b/DemoApp/src/main/res/layout/fragment_navigation_drawer.xml
@@ -8,4 +8,5 @@
     android:choiceMode="singleChoice"
     android:divider="@android:color/transparent"
     android:dividerHeight="0dp"
+    android:paddingTop="@dimen/status_bar_height"
     tools:context=".NavigationDrawerFragment" />
