--- a/DemoApp/src/main/res/layout/layout_popup.xml
+++ b/DemoApp/src/main/res/layout/layout_popup.xml
@@ -1,21 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:background="@null">
 
-    <com.cyrillrx.android.demo.PopLayout
-        android:descendantFocusability="beforeDescendants"
-        android:id="@+id/popup"
-        android:layout_width="200dp"
-        android:layout_height="200sp"
-        android:background="@android:color/holo_blue_bright"
-        android:focusableInTouchMode="true">
+    <View
+        android:id="@+id/overlay"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/overlay"
+        android:visibility="gone" />
 
-        <TextView
-            style="@style/sample_title"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-    </com.cyrillrx.android.demo.PopLayout>
+    <View
+        android:id="@+id/origin"
+        android:layout_width="@dimen/touch_target"
+        android:layout_height="@dimen/touch_target"
+        android:background="@drawable/bg_origin" />
 
-</RelativeLayout>
+    <Button
+        android:id="@+id/btn_1"
+        style="@style/TouchTarget"
+        android:text="1" />
+
+    <Button
+        android:id="@+id/btn_2"
+        style="@style/TouchTarget"
+        android:text="2" />
+
+    <Button
+        android:id="@+id/btn_3"
+        style="@style/TouchTarget"
+        android:text="3" />
+</FrameLayout>
