--- a/DemoApp/src/main/res/layout/activity_card_list_v.xml
+++ b/DemoApp/src/main/res/layout/activity_card_list_v.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <android.support.v7.widget.RecyclerView
-    android:id="@+id/my_recycler_view"
+    android:id="@+id/recycler_view"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
