--- a/DemoApp/src/main/res/values-v21/styles.xml
+++ b/DemoApp/src/main/res/values-v21/styles.xml
@@ -7,8 +7,7 @@
     -->
     <style name="DoubleNavTheme" parent="AppTheme">
         <item name="windowActionBar">false</item>
-        <item name="windowActionModeOverlay">true</item>
-        <item name="android:windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
         <item name="android:windowActionModeOverlay">true</item>
         <item name="android:windowDrawsSystemBarBackgrounds">true</item>
         <item name="android:windowTranslucentStatus">true</item>
