--- a/DemoApp/src/main/res/values/styles.xml
+++ b/DemoApp/src/main/res/values/styles.xml
@@ -34,6 +34,7 @@
 
     <style name="DoubleNavTheme" parent="AppTheme">
         <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
         <item name="windowActionModeOverlay">true</item>
     </style>
 
