--- a/KitkatTv/src/main/res/layout/browse_fragment.xml
+++ b/KitkatTv/src/main/res/layout/browse_fragment.xml
@@ -5,9 +5,9 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <fragment
+    <androidx.fragment.app.FragmentContainerView
         android:id="@+id/browse_fragment"
-        android:name="android.support.v17.leanback.app.BrowseFragment"
+        android:name="com.cyrillrx.kitkattv.ContentBrowserFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 </LinearLayout>
