--- a/DemoApp/src/main/res/layout/activity_bottom_nav.xml
+++ b/DemoApp/src/main/res/layout/activity_bottom_nav.xml
@@ -28,7 +28,7 @@
         android:text="Music"
         android:visibility="gone" />
 
-    <android.support.design.widget.BottomNavigationView
+    <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
