--- a/KitkatTv/src/main/res/values/styles.xml
+++ b/KitkatTv/src/main/res/values/styles.xml
@@ -6,7 +6,7 @@
         Base application theme
     -->
 
-    <style name="AppTheme" parent="Theme.AppCompat">
+    <style name="AppTheme" parent="Theme.MaterialComponents">
         <item name="colorPrimary">@color/primary</item>
         <item name="colorPrimaryDark">@color/primary_dark</item>
         <item name="colorAccent">@color/accent</item>
