--- a/Webview/src/main/res/values/styles.xml
+++ b/Webview/src/main/res/values/styles.xml
@@ -2,10 +2,10 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="BaseTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <item name="colorPrimary">@color/primary</item>
-        <item name="colorPrimaryDark">@color/primary_dark</item>
-        <item name="colorAccent">@color/accent</item>
+    <style name="BaseTheme" parent="Theme.MaterialComponents.Light">
+        <item name="android:colorPrimary">@color/primary</item>
+        <item name="android:colorPrimaryDark">@color/primary_dark</item>
+        <item name="android:colorAccent">@color/accent</item>
     </style>
 
 
@@ -17,6 +17,7 @@
     <style name="holo_blue_btn">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
+        <item name="android:fontFamily">sans-serif</item>
         <item name="android:background">@drawable/holo_blue_btn</item>
         <item name="android:textColor">@color/holo_blue_btn</item>
         <item name="android:padding">10dp</item>
